# VulkanMPR

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  shader_cmp.py  vcpkg.json  vcpkg_init_project.py
src/: VulkanMPR.cpp  mpr_types.hpp
src/compiled_shaders/: colored_mesh.frag.spv  colored_mesh.vert.spv  colored_triangle.vert.spv  mesh.frag.spv  mesh.pixel.spv  mesh.vert.spv  mesh.vertex.spv
src/private/: mpr_camera.cpp  mpr_descriptors.cpp  mpr_engine.cpp  mpr_error_check.cpp  mpr_image.cpp  mpr_loader.cpp  mpr_pipelines.cpp
src/public/: mpr_camera.hpp  mpr_descriptors.hpp  mpr_engine.hpp  mpr_error_check.hpp  mpr_image.hpp  mpr_init_vk_stucts.hpp  mpr_loader.hpp  mpr_pipelines.hpp
src/shaders/: colored_mesh.frag  colored_mesh.vert  colored_triangle.frag  colored_triangle.vert  gradient.comp  gradient_color.comp  input_structs.glsl  mesh.frag  mesh.slang  mesh.vert
